hphp/hack/test/typecheck/assignment_sequencing/lambda_default_arg_increment.php.exp
File "lambda_default_arg_increment.php", line 5, characters 22-23:
Assignments can no longer be used as expressions. Pull the assignment out into a separate statement. (Parsing[1002])
File "lambda_default_arg_increment.php", line 5, characters 29-30:
Assignments can no longer be used as expressions. Pull the assignment out into a separate statement. (Parsing[1002])
File "lambda_default_arg_increment.php", line 5, characters 22-23:
Unsequenced modifications to local variable. Modified here (Typing[4144])
File "lambda_default_arg_increment.php", line 5, characters 29-30:
And also modified here
