hphp/hack/test/typecheck/assignment_sequencing/lambda_default_arg_increment.php
<?hh // strict

// Lurrrrrrrrrrrr
function g(): void {
  $z = ($y = 0, $x = $y++ + $y++) ==> $x + $y;

}
